rework how we handle algebra in CallTrees, casts should be more explicit now